src/objects/Onboarding_Form__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <formula>Primary_Contact__r.Mailing_Street_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line__c</fullName>
        <formula>Primary_Contact__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Info</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>EDMS_Onboarding_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charter_Fee__c</fullName>
        <label>Charter Fee:</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Primary_Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Cost_Planner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>College Cost Planner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consolidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>School_Name__r.Contract_End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>School_Name__r.Contract_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>School_Name__r.Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_Consolidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DL Consolidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_Grad_PLUS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DL Grad PLUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_Parent_PLUS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DL Parent PLUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_Subsidized_Stafford__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DL Subsidized Stafford</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_Unsubsidized_Stafford__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DL Unsubsidized Stafford</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Primary_Contact__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_School_Program_Length__c</fullName>
        <label>ED School Program Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associate&apos;s Degree</fullName>
                </value>
                <value>
                    <fullName>Bachelor&apos;s Degree</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Graduate/Professional</fullName>
                </value>
                <value>
                    <fullName>Master&apos;s or Doctor&apos;s Degree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ED_School_Type__c</fullName>
        <label>ED School Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FY_2010__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FY 2010</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FY_2011__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FY 2011</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FY_2012__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FY 2012</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grad_PLUS__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Grad PLUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HEAL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HEAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <formula>Primary_Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Money_101__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Courses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OE_Code__c</fullName>
        <formula>School_Name__r.OE_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OE Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLUS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PLUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perkins__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perkins</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phonetic_Name__c</fullName>
        <label>Phonetic Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact:</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>EDMS_Onboarding_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Name_BPMS__c</fullName>
        <label>Print Name (BPMS)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Consolidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Consolidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scholarship_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scholarship Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>Organization Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Onboarding Forms</relationshipLabel>
        <relationshipName>EDMS_Onboarding_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>School_Website__c</fullName>
        <formula>School_Name__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stafford_Subsidized__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Stafford Subsidized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stafford_Unsubsidized__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Stafford Unsubsidized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stafford__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Stafford</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <formula>Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_s_Date__c</fullName>
        <label>Today&apos;s Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>School - 2 Year Private</fullName>
                </value>
                <value>
                    <fullName>School - 2 Year Public</fullName>
                </value>
                <value>
                    <fullName>School - 3 Year School</fullName>
                </value>
                <value>
                    <fullName>School - 4 Year Private</fullName>
                </value>
                <value>
                    <fullName>School - 4 Year Public</fullName>
                </value>
                <value>
                    <fullName>School - Foreign School</fullName>
                </value>
                <value>
                    <fullName>School - Grad/Profession</fullName>
                </value>
                <value>
                    <fullName>School - Liberal Arts</fullName>
                </value>
                <value>
                    <fullName>School - Proprietary</fullName>
                </value>
                <value>
                    <fullName>School - Voc or Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Years_in_Repayment__c</fullName>
        <inlineHelpText>Eligible years for Proactive EDMS</inlineHelpText>
        <label>Years in Repayment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Primary_Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Onboarding Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Onboarding Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>